<resources>
    <string name="app_name">Jarvis</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="to_do">To-Do</string>
    <string name="pong">Pong</string>
    <string name="weather">Weather</string>
    <string name="reload">Reload</string>
    <string name="all_tasks"><u>All tasks...</u></string>
    <string name="add_colleague">Add Colleague</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="colleague_id">Colleague ID</string>
    <string name="colleague_nickname">Colleague Nickname</string>
    <string name="delete_colleague">Delete Colleague?</string>
    <string name="_176">176</string>
    <string name="_177">177</string>
    <string name="dont_press_me">Don\'t press me!</string>
    <string name="dateFormat">EEE, MMM d</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="yourName">ime</string>
    <string name="username_and_password"><b>Enter username and password</b></string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="jarvis">Jarvis</string>
    <string name="today_calendar"><u>Today calendar</u></string>
    <string name="zet">ZET</string>
    <string name="nothingTodayOnCalendar">Ummmm.... Neam niš</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="Zagreb">Zagreb</string>
    <string name="Bistra">Bistra</string>
    <string name="Tisno">Tisno</string>
    <string name="host">Host</string>
<<<<<<< HEAD
    <string name="player_name">Player name</string>
    <string name="create_room">Create room</string>
=======
    <string name="join">Join</string>
    <string name="_2_players">2 Players</string>
    <string name="title_activity_pong">PongActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
>>>>>>> ae8830ebb00e724674be868333135e8257ec863e
</resources>
