<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/balloon_margin"
        android:layout_marginLeft="@dimen/balloon_margin"
        android:background="@drawable/bottom_edge"
        android:textSize="@dimen/title_size"
        android:textColor="@color/colorPrimary"
        android:text="Your score : 1000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="@dimen/title_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/pong" />

        <Button
            android:id="@+id/buttonHost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/host" />

        <Button
            android:id="@+id/buttonJoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join" />

        <Button
            android:id="@+id/button2Players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_players" />
    </LinearLayout>
</RelativeLayout>