<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_above="@id/login_form"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_and_password"
            android:textSize="25sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:ems="8"
            android:inputType="numberPassword"
            android:hint="@string/password"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/spinner_text_size" />



    </LinearLayout>
    
</RelativeLayout>